# clion_test

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  ForceContorl_PowerContorl.ioc  project.jdebug  stm32h723vetx_flash.ld
App/chassis/: chassis_ctrl.cpp  chassis_ctrl.hpp  chassis_task.cpp  chassis_task.hpp
Core/Inc/: fault_debug.h  main.h  stm32h7xx_it.h
Core/Src/: dma.c  fault_debug.c  fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  usart.c
TASK/chassis_app/: chassis_ctrl.cpp  chassis_ctrl.hpp
TASK/chassis_task/: chassis_task.cpp
TASK/task_init/: task_init.cpp  task_init.hpp
cmake/stm32cubemx/: CMakeLists.txt
